fix(style): vertical icon alignment

--- a/src/style.css
+++ b/src/style.css
@@ -17,47 +17,57 @@
   --bzn-background-color-info: #cff4fc;
   --bzn-border-color-info: #b6effb;
 }
+
 @keyframes fadeOutTop {
   0% {
     transform: translateY(0);
     opacity: 1;
   }
+
   100% {
     transform: translateY(-50px);
     opacity: 0;
   }
 }
+
 @keyframes fadeOutBottom {
   0% {
     transform: translateY(0);
     opacity: 1;
   }
+
   100% {
     transform: translateY(50px);
     opacity: 0;
   }
 }
+
 @keyframes fadeInTop {
   0% {
     transform: translateY(-50px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes fadeInBottom {
   0% {
     transform: translateY(50px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes bounceInDown {
+
   from,
   60%,
   75%,
@@ -65,25 +75,32 @@
   to {
     animation-timing-function: var(--bzn-trans-cubic-bezier);
   }
+
   0% {
     opacity: 0;
     transform: translate3d(0, -3000px, 0);
   }
+
   60% {
     opacity: 1;
     transform: translate3d(0, 25px, 0);
   }
+
   75% {
     transform: translate3d(0, -10px, 0);
   }
+
   90% {
     transform: translate3d(0, 5px, 0);
   }
+
   to {
     transform: none;
   }
 }
+
 @keyframes bounceInUp {
+
   from,
   60%,
   75%,
@@ -91,52 +108,64 @@
   to {
     animation-timing-function: var(--bzn-trans-cubic-bezier);
   }
+
   from {
     opacity: 0;
     transform: translate3d(0, 3000px, 0);
   }
+
   60% {
     opacity: 1;
     transform: translate3d(0, -20px, 0);
   }
+
   75% {
     transform: translate3d(0, 10px, 0);
   }
+
   90% {
     transform: translate3d(0, -5px, 0);
   }
+
   to {
     transform: translate3d(0, 0, 0);
   }
 }
+
 @keyframes bounceOutDown {
   20% {
     transform: translate3d(0, 10px, 0);
   }
+
   40%,
   45% {
     opacity: 1;
     transform: translate3d(0, -20px, 0);
   }
+
   to {
     opacity: 0;
     transform: translate3d(0, 2000px, 0);
   }
 }
+
 @keyframes bounceOutUp {
   20% {
     transform: translate3d(0, -10px, 0);
   }
+
   40%,
   45% {
     opacity: 1;
     transform: translate3d(0, 20px, 0);
   }
+
   to {
     opacity: 0;
     transform: translate3d(0, -2000px, 0);
   }
 }
+
 @keyframes slideInBlurredTop {
   0% {
     transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
@@ -144,6 +173,7 @@
     filter: blur(240px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0) scaleY(1) scaleX(1);
     transform-origin: 50% 50%;
@@ -151,6 +181,7 @@
     opacity: 1;
   }
 }
+
 @keyframes slideOutBlurredTop {
   0% {
     transform: translateY(0) scaleY(1) scaleX(1);
@@ -158,6 +189,7 @@
     filter: blur(0);
     opacity: 1;
   }
+
   100% {
     transform: translateY(-1000px) scaleY(2) scaleX(0.2);
     transform-origin: 50% 0%;
@@ -165,6 +197,7 @@
     opacity: 0;
   }
 }
+
 @keyframes slideInBlurredBottom {
   0% {
     transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
@@ -172,6 +205,7 @@
     filter: blur(240px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0) scaleY(1) scaleX(1);
     transform-origin: 50% 50%;
@@ -179,6 +213,7 @@
     opacity: 1;
   }
 }
+
 @keyframes slideOutBlurredBottom {
   0% {
     transform: translateY(0) scaleY(1) scaleX(1);
@@ -186,6 +221,7 @@
     filter: blur(0);
     opacity: 1;
   }
+
   100% {
     transform: translateY(1000px) scaleY(2) scaleX(0.2);
     transform-origin: 50% 100%;
@@ -193,6 +229,7 @@
     opacity: 0;
   }
 }
+
 /* ----------------------------------------------
 * GENERAL
  * ---------------------------------------------- */
@@ -203,79 +240,99 @@
   flex-direction: column;
   width: 10vw;
 }
+
 [data-notify] [data-notify-wrapper-position] {
   position: fixed;
 }
+
 [data-notify] [data-notify-wrapper-position='top-left'] {
   top: 10px;
   left: 10px;
 }
+
 [data-notify] [data-notify-wrapper-position='top-center'] {
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
 }
+
 [data-notify] [data-notify-wrapper-position='top-right'] {
   top: 10px;
   right: 10px;
 }
+
 [data-notify] [data-notify-wrapper-position='bottom-left'] {
   bottom: 10px;
   left: 10px;
 }
+
 [data-notify] [data-notify-wrapper-position='bottom-center'] {
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
 }
+
 [data-notify] [data-notify-wrapper-position='bottom-right'] {
   bottom: 10px;
   right: 10px;
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .fade-active {
   animation: fadeInTop var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .fade-active {
   animation: fadeInBottom var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .fade-leave {
   animation: fadeOutTop var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .fade-leave {
   animation: fadeOutBottom var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .bounce-active {
   animation: bounceInDown var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .bounce-active {
   animation: bounceInUp var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .bounce-leave {
   animation: bounceOutUp var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .bounce-leave {
   animation: bounceOutDown var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .slide-blurred-active {
   animation: slideInBlurredTop var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .slide-blurred-active {
   animation: slideInBlurredBottom var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='top'] .slide-blurred-leave {
   animation: slideOutBlurredTop var(--bzn-trans-duration);
 }
+
 [data-notify] [data-notify-wrapper-position|='bottom'] .slide-blurred-leave {
   animation: slideOutBlurredBottom var(--bzn-trans-duration);
 }
+
 [data-notify] .notify {
   box-sizing: border-box;
   width: fit-content;
   display: grid;
-  grid-template-areas: var(---area);
-  column-gap: 0.33rem;
+  grid-template-columns: max-content 1fr;
+  column-gap: 0.5rem;
   padding: 0.25rem;
-  padding-right: calc(0.33rem + 0.25rem);
+  padding-right: calc(0.5rem + 0.25rem);
   margin: auto;
   margin-bottom: 1rem;
   border: 1px solid transparent;
@@ -284,36 +341,37 @@
   user-select: none;
   cursor: pointer;
 }
+
 [data-notify] .notify__title {
-  grid-area: title;
   align-self: center;
   font-weight: 500;
   color: #0b2e13;
 }
+
 [data-notify] .notify__icon {
   display: flex;
-  grid-area: icon;
-  align-self: center;
+  align-self: start;
   justify-self: center;
 }
-[data-notify] .notify__content {
-  grid-area: content;
-}
+
 [data-notify] .notify--success {
   color: var(--bzn-color-success);
   background-color: var(--bzn-background-color-success);
   border-color: var(--bzn-border-color-success);
 }
+
 [data-notify] .notify--danger {
   color: var(--bzn-color-danger);
   background-color: var(--bzn-background-color-danger);
   border-color: var(--bzn-border-color-danger);
 }
+
 [data-notify] .notify--warning {
   color: var(--bzn-color-warning);
   background-color: var(--bzn-background-color-warning);
   border-color: var(--bzn-border-color-warning);
 }
+
 [data-notify] .notify--info {
   color: var(--bzn-color-info);
   background-color: var(--bzn-background-color-info);
